--- a/static/layout.css
+++ b/static/layout.css
@@ -1,11 +1,11 @@
 .layout {
     margin: 2rem 2.4rem;
-    height: calc(100vh - 2rem * 2); /* full height minus the margin size (top & bottom)*/
+    height: calc(100% - 2rem * 2); /* full height minus the margin size (top & bottom)*/
     display: grid;
     grid-template-columns: 10% 75% 15%;
     grid-template-rows: 5% 90% 5%;
     align-items: center;
-    width: calc(100vw - 2.4rem * 2);
+    width: calc(100% - 2.4rem * 2);
     overflow: hidden;
 }
 
@@ -71,8 +71,8 @@
 @media only screen and (max-width: 1024px) {
     .layout {
         margin: 1.5rem 1.5rem;
-        height: calc(100vh - 1.5rem * 2);
-        width: calc(100vw - 1.5rem * 2);
+        height: calc(100% - 1.5rem * 2);
+        width: calc(100% - 1.5rem * 2);
         grid-template-columns: 50% 50%;
         grid-template-rows: 8% 8% 84%;
         overflow: scroll;
@@ -104,7 +104,7 @@
         display: block;
         position: absolute;
         width: 100vw;
-        height: 100vh;
+        height: 100%;
         z-index: -1;
         left: 0;
         opacity: 0;
@@ -121,7 +121,7 @@
         right: -70%;
         transition: 1s all;
         overflow: hidden;
-        height: 100vh;
+        height: 100%;
         width: 70%;
         align-items: end;
         justify-content: space-between;
